--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   sensor_msgs
+  cv_bridge
+  std_msgs
 )
 
 ## System dependencies are found with CMake's conventions
